<resources>
    <string name="app_name">SchoolJob</string>
    <string name="string_or">или</string>
    <string name="phone_email">Телефон или эл. почта</string>
    <string name="password_text">Пароль</string>
    <string name="google">Войти через Google</string>
    <string name="register_text">Зарегистрироваться</string>
    <string name="name_user">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="email">Электронная почта</string>
    <string name="phone">Номер телефона</string>
    <string name="password">Пароль</string>
    <string name="password_toggle">Повторите пароль</string>
    <string name="entrance">Войти</string>
    <string name="back">Назад</string>
    <string name="title_activity_fon">FonActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Личный профиль</string>
    <string name="title_dashboard">Вакансии</string>
    <string name="title_subtract">Диалоги</string>
    <string name="title_information">Информация</string>
    <string name="data_user">Сапрыкин\nКонстантин\nДмитриевич\nsaprikostya@gmail.com\n+79818590069</string>
    <string name="about_self">О себе:</string>
    <string name="text_user">Обо мне нет никакой информации</string>
    <string name="history_work">История:</string>
    <string name="work_data">1. ООО “Канцсвет” - 2 месяца;\n2. ООО “Бухгалодон” - 3 месяца;</string>
    <string name="settings">Настройки</string>
    <string name="profile">Профиль</string>
    <string name="courses_text">Курсы</string>
    <string name="text_advice_lawyer">Советы от юриста</string>
    <string name="text_about_company">О компании</string>
    <string name="contacts">Контакты</string>
    <string name="waiter">Официант</string>
    <string name="payment">250 рублей/час</string>
    <string name="days_work">Пятница, Восресенье</string>
    <string name="main">Главное</string>
    <string name="replace_foto">Заменить фото</string>
    <string name="about_self0">О себе</string>
    <string name="history_work0">История работы</string>
    <string name="advice_1">На что обращать внимание при подписании договора?</string>
    <string name="advice_2">При каких условиях могут работать подростки разных возрастов?</string>
    <string name="text_contacts_phone">Номер телефона:\n +7 (964) 322-80-77</string>
    <string name="text_contacts_email">Email:\n ekaterinagulko725@gmail.com</string>
    <string name="text_contacts_vk">Группа в ВК:\n https://vk.com/public203081451</string>
    <string name="text_contacts_instagram">Instagram:\n @schooljob</string>
    <string name="description_app">- это приложение,\n которое даёт\n возможноть подросткам\n от 14 до 18 лет найти\n работу.</string>
    <string name="company_description">Цель: помочь подросткам 14-18 лет найти работу в свободное от учебы время.\n \nНаши ценности:\n 1. Ответственный подход к выбору предлагаемых должностей.\n 2. Профессиональное самоопределение молодёжи.\n 3. Абсолютная конфиденциальность по отношению к соискателю.\n 4. Уважение интересов заказчика и предполагаемого специалиста.\n 5. Человечность и аргументированность в работе с профессиональными работниками.\n</string>
    <string name="mcdonalds">Mcdonalds</string>
    <string name="last_message">Здравствуйте! Приглашаем вас...</string>
    <string name="sender">Отправитель</string>
    <string name="apply_text">Применить</string>
</resources>