<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.MainActivity"
    android:background="@drawable/grad">

    <TextView
        android:id="@+id/some_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_or"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" />

    <ImageView
        android:id="@+id/fon_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="false"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/vector_3"/>

    <ImageView
        android:id="@+id/fon_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="false"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/vector_4" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/group_29" />

    <EditText
        style="@style/editLine"
        android:id="@+id/password"
        android:gravity="start|top"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.525"
        tools:ignore="RtlCompat,TextFields" />

    <EditText
        android:id="@+id/phoneEmail"
        style="@style/editLine"
        android:gravity="start|top"
        android:hint="@string/phone_email"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        tools:ignore="RtlCompat,TextFields" />


    <Button
        android:id="@+id/entrance"
        style="@style/outputButton"
        android:layout_marginBottom="25dp"
        android:background="@drawable/rectangle_3"
        android:text="@string/entrance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/some_id"/>

    <Button
        android:id="@+id/entrance_google"
        style="@style/outputButton"
        android:layout_marginTop="60dp"
        android:background="@drawable/rectangle_3"
        android:text="@string/google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/some_id" />

    <Button
        android:id="@+id/register"
        style="@style/outputButton"
        android:layout_marginTop="30dp"
        android:background="@drawable/rectangle_3"
        android:text="@string/register_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entrance_google" />

</androidx.constraintlayout.widget.ConstraintLayout>