<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.contacts.ContactsFragment">


    <LinearLayout
        android:id="@+id/contacts_text"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginStart="25dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="25dp"
            android:id="@+id/contacts_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/frameText"
            android:layout_marginStart="0dp"
            android:textSize="@dimen/text_size_contacts"
            android:text="@string/text_contacts_phone"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/contacts_email"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/frameText"
            android:layout_marginStart="0dp"
            android:textSize="@dimen/text_size_contacts"
            android:text="@string/text_contacts_email"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/contacts_vk"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/frameText"
            android:layout_marginStart="0dp"
            android:textSize="@dimen/text_size_contacts"
            android:text="@string/text_contacts_vk"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/contacts_instagram"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/frameText"
            android:layout_marginStart="0dp"
            android:textSize="@dimen/text_size_contacts"
            android:text="@string/text_contacts_instagram"
            tools:ignore="SpUsage" />

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/contacts_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/theme_drawable" />



</androidx.constraintlayout.widget.ConstraintLayout>