<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.ui.company.CompanyFragment">

    <ImageView
        android:layout_marginStart="5dp"
        android:id="@+id/logo_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/theme_drawable" />


    <TextView
        android:id="@+id/name_app"
        style="@style/frameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="36dp"
        android:layout_marginTop="25dp"
        android:text="@string/app_name"
        app:layout_constraintStart_toEndOf="@id/logo_company"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_app"
        app:layout_constraintStart_toEndOf="@id/logo_company"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/companyText"
        android:text="@string/description_app"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo_company"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="25dp"
        android:text="@string/company_description"
        style="@style/companyText"

        />

</androidx.constraintlayout.widget.ConstraintLayout>