<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="app.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="app.ui.subtract.SubtractFragment"
        android:label="@string/title_subtract"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_information"
        android:name="app.ui.information.InformationFragment"
        android:label="@string/title_information"
        tools:layout="@layout/fragment_information">
        <action
            android:id="@+id/action_informationFragment_to_adviceFragment"
            app:destination="@id/adviceLawyer" />
        <action
            android:id="@+id/action_informationFragment_to_contactsFragment"
            app:destination="@id/contacts" />
        <action
            android:id="@+id/action_informationFragment_to_companyFragment"
            app:destination="@id/company" />
        <action
            android:id="@+id/action_informationFragment_to_courseFragment"
            app:destination="@id/courses" />
    </fragment>
    <fragment
        android:id="@+id/settings"
        android:name="app.ui.settings.SettingsFragment"
        android:label="Настройки"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settingsFragment_to_main_settingsFragment"
            app:destination="@id/main_settings" />
    </fragment>
    <fragment
        android:id="@+id/adviceLawyer"
        android:name="app.ui.advice.AdviceFragment"
        android:label="Советы от юриста"
        tools:layout="@layout/fragment_advice">
    </fragment>
    <fragment
        android:id="@+id/contacts"
        android:name="app.ui.contacts.ContactsFragment"
        android:label="Контакты"
        tools:layout="@layout/fragment_contacts">
    </fragment>
    <fragment
        android:id="@+id/company"
        android:name="app.ui.company.CompanyFragment"
        android:label="О компании"
        tools:layout="@layout/fragment_company">
    </fragment>
    <fragment
        android:id="@+id/courses"
        android:name="app.ui.course.CourseFragment"
        android:label="Курсы"
        tools:layout="@layout/fragment_course">
    </fragment>
    <fragment
        android:id="@+id/main_settings"
        android:name="app.ui.settingsmain.MainSettingsFragment"
        android:label="Главное"
        tools:layout="@layout/fragment_main_settings">
    </fragment>
</navigation>