<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:background="@color/card_background"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/picture_work"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/waiter"
                android:src="@drawable/waiter" />
            <LinearLayout
                android:layout_marginStart="15dp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/text_profession"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/advertisementText"
                    android:text="@string/waiter"/>
                <TextView
                    android:id="@+id/text_salary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/advertisementText"
                    android:text="@string/payment"/>
                <TextView
                    android:id="@+id/text_work_days"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/advertisementText"
                    android:text="@string/days_work"/>
            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>