<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:background="@color/transparent"
            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                android:layout_height="74dp"
                android:layout_width="74dp"
                android:layout_marginStart="10dp"
                app:cardCornerRadius="100dp">
                <ImageView
                    android:id="@+id/picture_work"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/waiter"
                    android:scaleType="centerCrop"
                    android:src="@drawable/waiter" />

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                app:cardBackgroundColor="@color/chat_card_background"
                app:cardCornerRadius="16dp"
                android:layout_height="match_parent">
            <LinearLayout
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/text_profession"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/advertisementText"
                    android:textSize="24dp"
                    android:text="@string/mcdonalds"/>
                <TextView
                    android:id="@+id/text_salary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/advertisementText"
                    android:text="@string/last_message"/>
            </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>