<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        >
        <FrameLayout
            android:id="@+id/courses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textAlignment="viewEnd"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/text_courses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/frameText"
                android:text="@string/main"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_gravity="right|center_vertical"
                android:src="@drawable/union" />
        </FrameLayout>
        <FrameLayout
            android:layout_marginTop="40dp"
            android:id="@+id/advice_lawyer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/text_advice_lawyer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/frameText"
                android:text="@string/replace_foto"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_gravity="right|center_vertical"
                android:src="@drawable/union" />
        </FrameLayout>

        <FrameLayout
            android:layout_marginTop="40dp"
            android:id="@+id/about_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/text_about_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/frameText"
                android:text="@string/about_self0"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_gravity="right|center_vertical"
                android:src="@drawable/union" />
        </FrameLayout>
        <FrameLayout
            android:layout_marginTop="40dp"
            android:id="@+id/contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/text_contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/frameText"
                android:text="@string/history_work0"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_gravity="right|center_vertical"
                android:src="@drawable/union" />
        </FrameLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>